--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "express-jwt": "^8.4.1",
+    "mongoose": "^8.1.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   }
 }
